# mem0_local_mcp

./: .gitignore  GEMINI.md  LICENSE  README.md  mem_manager.py  pyproject.toml  requirements.txt  test_concurrency.py  test_integration.py  test_mem0_fix.py  utils.py
.context/compound-engineering/ce-review/: last_run_id
.gemini/: settings.json
.serena/: project.yml
docs/: 000_CORE.md  ARCHITECTURE.md  MEMORY_LOG.md  kb_setup_template.md
docs/.obsidian/: workspace.json
docs/archive/backups/: 000_CORE.original.md  2026-04-17-mem0-identity-setup.original.md  2026-04-17-sqlite-migration-design.original.md  2026-04-17-sqlite-migration.original.md  2026-04-17.original.md  ARCHITECTURE.original.md  commands-log-2026-04-17.original.md  index.original.md  log.original.md  mcp-server-visibility-fix-2026-04-17.original.md  mem0-concurrency-chroma-filelock-2026-04-17.original.md  mem0-integration.original.md  mem0-v2-api-fix-2026-04-17.original.md  specs-2026-04-17-mem0-identity-setup.original.md
docs/daily/: 2026-04-17.md
docs/knowledge/: index.md  log.md
docs/knowledge/concepts/: mem0-integration.md
docs/superpowers/plans/: 2026-04-16-project-reorganization.md  2026-04-17-sqlite-migration.md
mem0_db/: meta.json
src/mem0_local_mcp/: __init__.py  mcp_server.py  mem_manager.py  utils.py
src/mem0_local_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_concurrency.py  test_integration.py  test_mem0_fix.py  test_mem_manager.py  test_mem_manager_unit.py  test_sqlite_concurrency.py  test_utils.py
(+14 files in other folders)
