[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mem0-local-mcp"
version = "0.1.0"
description = "Mem0 Local Memory MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "mem0ai",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
mem0-local-mcp = "mem0_local_mcp.mcp_server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
